# jar

./: -verso-docs.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GENESIS.md  Makefile  README.md  genesis.json  index.html  lakefile.lean  ranking.json  xref.json  zensical.toml
-verso-search/: searchIndex.js  searchIndex_1.js  searchIndex_103.js  searchIndex_107.js  searchIndex_11.js  searchIndex_111.js  searchIndex_113.js  searchIndex_117.js  searchIndex_120.js  searchIndex_121.js  searchIndex_123.js  searchIndex_129.js  searchIndex_13.js  searchIndex_133.js  searchIndex_135.js  searchIndex_140.js  searchIndex_147.js  searchIndex_15.js  searchIndex_153.js  searchIndex_161.js  searchIndex_165.js  searchIndex_17.js  searchIndex_177.js  searchIndex_18.js  searchIndex_183.js  searchIndex_185.js  searchIndex_195.js  searchIndex_20.js  searchIndex_202.js  searchIndex_203.js  searchIndex_205.js  searchIndex_21.js  searchIndex_210.js  searchIndex_214.js  searchIndex_215.js  searchIndex_217.js  searchIndex_218.js  searchIndex_223.js  searchIndex_227.js  searchIndex_229.js  (+31 more)
.github/cache/: genesis.json
.github/workflows/: ci-grey.yml  ci-spec.yml  ci.yml  docs.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Accumulation/: index.html
Accumulation/Block-Level-Accumulation/: index.html
Accumulation/Data-Types/: index.html
Accumulation/Host-Calls-_LPAR____12___4_RPAR_/: index.html
Accumulation/Pipeline/: index.html
Accumulation/Single-Service-Accumulation/: index.html
Cryptographic-Primitives/: index.html
Cryptographic-Primitives/BLS12-381/: index.html
Cryptographic-Primitives/Bandersnatch/: index.html
Cryptographic-Primitives/Bandersnatch-Ring-VRF/: index.html
Cryptographic-Primitives/Contexts/: index.html
Cryptographic-Primitives/Ed25519/: index.html
Cryptographic-Primitives/Hash-Functions/: index.html
Cryptographic-Primitives/Utility/: index.html
Erasure-Coding/: index.html
Erasure-Coding/Encoding-and-Recovery/: index.html
Erasure-Coding/Galois-Field-GF_LPAR_2___16_RPAR_/: index.html
Erasure-Coding/Segment-Operations/: index.html
Genesis/: Design.lean  Json.lean  Scoring.lean  State.lean  Types.lean
Genesis/Cli/: SelectTargets.lean
Jar/: Accumulation.lean  Codec.lean  Consensus.lean  Crypto.lean  Json.lean  State.lean  Variant.lean
Jar/Commitment/: DA.lean  Proof.lean  Prover.lean  Verifier.lean
Jar/PVM/: GasCost.lean  Interpreter.lean
Jar/Test/: Accumulate.lean  AccumulateJson.lean  AccumulateJsonMain.lean  Arbitrary.lean  Assurances.lean  AssurancesJson.lean  AssurancesJsonMain.lean  Authorizations.lean  AuthorizationsJson.lean  AuthorizationsJsonMain.lean  BlockTest.lean  BlockTestMain.lean  Disputes.lean  DisputesJson.lean  DisputesJsonMain.lean  History.lean  HistoryJson.lean  HistoryJsonMain.lean  Preimages.lean  PreimagesJson.lean  PreimagesJsonMain.lean  PreimagesVectors.lean  Properties.lean  PropertyMain.lean  Reports.lean  ReportsJson.lean  ReportsJsonMain.lean  Safrole.lean  SafroleJson.lean  SafroleJsonMain.lean  Statistics.lean  StatisticsJson.lean  StatisticsJsonMain.lean  StfServer.lean  StfServerMain.lean
Jar/Types/: Config.lean  Validators.lean
Merkle-Structures/: index.html
Merkle-Structures/Binary-Merkle-Tree/: index.html
Merkle-Structures/Merkle-Mountain-Range/: index.html
Merkle-Structures/State-Trie/: index.html
Merkle-Structures/Trie-Nodes/: index.html
Notation-and-Conventions/: index.html
Notation-and-Conventions/Cryptographic-Key-Types/: index.html
Numeric-Types/: index.html
Polkadot-Virtual-Machine/: index.html
Protocol-Constants/: index.html
Safrole-Consensus/: index.html
Serialization-Codec/: index.html
Service-Invocations/: index.html
State-Transition/: index.html
Type-Definitions/: index.html
crates/grey-bench/: Cargo.toml
crates/grey-bench/benches/: pvm_bench.rs
crates/grey-bench/src/: lib.rs
crates/grey-codec/: Cargo.toml
crates/grey-codec/src/: decode.rs  header_codec.rs  lib.rs
crypto-ffi/: bridge.c
docs/: benchmark.md  introduction.md  jit-optimization.md  pvm-interpreter-optimization.md
find/: index.html
grey/: CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
grey/crates/grey-bench/: Cargo.toml  build.rs
grey/crates/grey-bench/benches/: mem_bench.rs  pvm_bench.rs  subvm_bench.rs
grey/crates/grey-bench/examples/: compile_vs_exec.rs  dump_native.rs  ecrecover_single.rs  profile_interp.rs
grey/crates/grey-bench/src/: lib.rs  mem.rs
grey/crates/grey-merkle/: Cargo.toml
grey/crates/grey-merkle/src/: state_serial.rs
grey/crates/grey-merkle/tests/: proptest_trie.rs
grey/crates/grey-services/: Cargo.toml
grey/crates/grey-services/src/: accumulation.rs
grey/crates/grey-store/: Cargo.toml
grey/crates/grey-store/src/: lib.rs
grey/crates/grey-store/tests/: proptest_store.rs
grey/crates/grey-transpiler/: Cargo.toml
grey/crates/grey-transpiler/src/: assembler.rs  emitter.rs  lib.rs  linker.rs  riscv.rs
grey/fuzz/: Cargo.toml  README.md
grey/fuzz/corpus/fuzz_block_decode/: block_varied  header_with_slot
grey/fuzz/corpus/fuzz_erasure_recover/: basic_16  basic_32  big  small_4
grey/fuzz/corpus/fuzz_pvm_differential/: large
grey/fuzz/corpus/fuzz_pvm_execute/: arith  medium
grey/fuzz/fuzz_targets/: fuzz_block_decode.rs  fuzz_codec_decode.rs  fuzz_erasure_recover.rs  fuzz_pvm_differential.rs  fuzz_work_package_decode.rs
grey/services/bench-blake2b/: Cargo.toml
grey/services/bench-blake2b/src/: main.rs
grey/services/bench-ecrecover/: Cargo.toml
grey/services/bench-ed25519/: Cargo.toml
grey/services/bench-ed25519/src/: main.rs
grey/services/bench-keccak/: Cargo.toml
grey/services/bench-keccak/src/: main.rs
grey/services/javm-guest-tests/: Cargo.toml  build.rs
grey/services/javm-guest-tests/src/: lib.rs  main.rs
grey/services/javm-guest-tests/src/tests/: arithmetic.rs  bitwise.rs  crypto.rs  memory.rs  mod.rs
grey/services/javm-guest-tests/tests/: debug.rs  guest.rs
spec/: AGENTS.md  Jar.lean  JarBook.lean
tools/: gen_preimages_tests.py  gen_safrole_tests.py  genesis-collect-reviews.sh
(+1101 files in other folders)
