[package]
name = "grey-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
grey-codec = { path = "../crates/grey-codec" }
grey-types = { path = "../crates/grey-types" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_codec_decode"
path = "fuzz_targets/fuzz_codec_decode.rs"
doc = false

[[bin]]
name = "fuzz_block_decode"
path = "fuzz_targets/fuzz_block_decode.rs"
doc = false

[[bin]]
name = "fuzz_work_package_decode"
path = "fuzz_targets/fuzz_work_package_decode.rs"
doc = false
