[package]
name = "grey-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
grey-codec = { path = "../crates/scale", package = "scale" }
grey-types = { path = "../crates/grey-types" }
grey-erasure = { path = "../crates/grey-erasure" }
javm = { path = "../crates/javm" }
grey-transpiler = { path = "../crates/grey-transpiler" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_codec_decode"
path = "fuzz_targets/fuzz_codec_decode.rs"
doc = false

[[bin]]
name = "fuzz_block_decode"
path = "fuzz_targets/fuzz_block_decode.rs"
doc = false

[[bin]]
name = "fuzz_work_package_decode"
path = "fuzz_targets/fuzz_work_package_decode.rs"
doc = false

[[bin]]
name = "fuzz_erasure_recover"
path = "fuzz_targets/fuzz_erasure_recover.rs"
doc = false

[[bin]]
name = "fuzz_pvm_execute"
path = "fuzz_targets/fuzz_pvm_execute.rs"
doc = false

[[bin]]
name = "fuzz_pvm_differential"
path = "fuzz_targets/fuzz_pvm_differential.rs"
doc = false
