[package]
name = "grey-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PVM benchmarks: grey interpreter vs recompiler vs polkavm"

[features]
default = ["polkavm-generic-sandbox"]
polkavm-generic-sandbox = ["polkavm/generic-sandbox"]

[dependencies]
javm = { workspace = true }
grey-transpiler = { workspace = true }
polkavm = "0.32.0"
polkavm-common = "0.32.0"

[build-dependencies]
build-javm = { path = "../build-javm" }
build-pvm = { path = "../build-pvm" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
k256 = { version = "0.13", features = ["ecdsa"] }

[[bench]]
name = "pvm_bench"
harness = false
