[package]
name = "grey-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent storage for blocks, state, and DA chunks."

[dependencies]
grey-types = { workspace = true }
scale = { workspace = true }
grey-crypto = { workspace = true }
grey-merkle = { workspace = true }
hex = { workspace = true }
redb = "3.1"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
grey-consensus = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
