[package]
name = "grey-transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V ELF to JAM PVM transpiler"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
javm = { workspace = true }
tracing-test = { workspace = true }
