[package]
name = "bench-blake2b"
version = "0.1.0"
edition = "2021"

[lib]
name = "bench_blake2b"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
blake2 = { version = "0.10", default-features = false }

[target.'cfg(target_env = "polkavm")'.dependencies]
polkavm-derive = "0.32.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
