[package]
name = "bench-ecrecover"
version = "0.1.0"
edition = "2021"

[lib]
name = "bench_ecrecover"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[target.'cfg(target_env = "polkavm")'.dependencies]
polkavm-derive = "0.32.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
