[package]
name = "javm-guest-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
javm-builtins = { path = "../../crates/javm-builtins" }
blake2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[build-dependencies]
build-javm = { path = "../../crates/build-javm" }

[dev-dependencies]
javm = { path = "../../crates/javm" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_env, values("javm", "polkavm"))', 'cfg(target_os, values("none"))'] }
